--- a/src/app/pages/admin/update-quiz/update-quiz.component.html
+++ b/src/app/pages/admin/update-quiz/update-quiz.component.html
@@ -36,6 +36,16 @@
 
     </div>
 </div>
+<!-- EDIT QUIZ PASSWORD -->
+<mat-form-field class="w100" appearance="fill">
+    <mat-label>Total questions</mat-label>
+    <input [(ngModel)] = "quiz.quizpassword"
+    type="quizpassword" name="quizpassword" matInput>
+</mat-form-field>
+
+
+
+
 <mat-slide-toggle name="active" [(ngModel)] = "quiz.active"
 class="mb20" 
 > Publish Status</mat-slide-toggle>
