--- a/src/app/pages/user/instructions/instructions.component.html
+++ b/src/app/pages/user/instructions/instructions.component.html
@@ -26,7 +26,7 @@
                         <li>You can attempt any number times</li>
                         <li>There are <b>{{quiz.numberOfQuestions}} questions </b> in total</li>
                         <li>Each question carries <b> {{quiz.maxMarks/quiz.numberOfQuestions}} mark(s)</b>. No negative marking for wrong ones.</li>
-                        <li>All questions are Multiple chioce.</li>
+                        <li>All questions are Multiple choice.</li>
                     </ul>
                     <mat-divider></mat-divider>
                     <br>
@@ -34,7 +34,7 @@
                     <ul>
                         <li>Click the <b>Start Quiz</b> button to start the quiz</li>
                         <li>The time will start as soon as you click the start button </li> 
-                        <li>You can't resume this quiz, if interruupted for any reason</li>
+                        <li>You can't resume this quiz, if interrupted for any reason</li>
                         <li>Click on submit Quiz button on th completion of the quiz</li>
                         <li>Click on Next button to move to the next question</li>
                         <li>Your report will be generated as PDF automatically. </li>
@@ -42,16 +42,15 @@
                 </mat-card-content>
 
                 <mat-card-actions >
-                    <!-- Action -->
-                    <div class=" container text-center">
-                    <button mat-raised-button color="primary" class=""
-                    (click)="startQuiz()" >Start Quiz</button>
+    <!-- Action -->
+                    <div class=" container text-center" *ngIf="!isLegible">
+                    <button mat-raised-button color="primary" class="" (click)="startQuiz()" >Start Quiz</button>
                 </div>
 
-
-                  <!-- Action -->
-                
-
+                <div class=" container text-center" *ngIf="isLegible">
+                    <button mat-raised-button color="accent" class="">Quiz Completed</button>
+            </div>
+     <!-- Action -->
                 </mat-card-actions>
                 </mat-card>
 
