Print Withoout URL and App Title done

--- a/src/app/pages/user/print-quiz/print-quiz.component.html
+++ b/src/app/pages/user/print-quiz/print-quiz.component.html
@@ -91,8 +91,8 @@
 </mat-card>
 <mat-card-actions>
     <div class="container text-center">
-    <button (click)="printPage()" mat-raised-button color="accent">Print</button>
-    <button mat-raised-button  color="primary" class="ml10" routerLink="/user-dashboard/0">Home</button>
+    <button (click)="printPage()" mat-raised-button color="accent" id="homePrintbtn">Print</button>
+    <button mat-raised-button  color="primary" class="ml10" id="homePrintbtn" routerLink="/user-dashboard/0">Home</button>
 </div>
    </mat-card-actions>
 </div>
