--- a/src/app/pages/admin/sidebar/sidebar.component.html
+++ b/src/app/pages/admin/sidebar/sidebar.component.html
@@ -8,10 +8,10 @@
      <mat-icon mat-list-icon  class="icon-position">account_circle</mat-icon> &nbsp;Profie</button>
 
 <button mat-list-item routerLink="/admin/categories" class="cat">
-     <mat-icon mat-list-icon  class="icon-position">list</mat-icon> &nbsp;Categories</button>
+     <mat-icon mat-list-icon  class="icon-position">list</mat-icon> &nbsp;Courses</button>
 
 <button mat-list-item routerLink="/admin/add-category">
-     <mat-icon mat-list-icon  class="icon-position" >add_circle_outline</mat-icon> &nbsp;Add Categories</button>
+     <mat-icon mat-list-icon  class="icon-position" >add_circle_outline</mat-icon> &nbsp;Add Courses</button>
 
 
      <button mat-list-item routerLink="/admin/quizzes">
