--- a/src/app/pages/admin/view-categories/view-categories.component.html
+++ b/src/app/pages/admin/view-categories/view-categories.component.html
@@ -6,7 +6,7 @@
     
     <mat-list>
         <div mat-subheader>
-           <h1> All Category</h1>
+           <h1> All Course</h1>
         </div>
 
 
@@ -58,7 +58,7 @@
         </mat-list-item>
     </mat-list>
     <div class="container text-center">
-        <button  mat-raised-button color="accent" routerLink="/admin/add-category"> Add New Category</button>
+        <button  mat-raised-button color="accent" routerLink="/admin/add-category"> Add New Course</button>
     </div>
 </mat-card> 
 
