--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -56,7 +56,12 @@
                   </mat-step>
                 </mat-stepper>
               </form>
-                
+              <div class="row">
+                <div class="col-md-12 offset-md-7">
+                  <button mat-raised-button color="primary" class="" >Forgotten Password?</button>
+                </div>
+                </div>
+
 
                 <!-- {{loginData | json}} -->
 
@@ -94,8 +99,8 @@
                           
                       </div>
                 </form> -->
+
             </mat-card>
-    
             </div>
         </div>
     </div>
