--- a/src/app/pages/user/print-quiz/print-quiz.component.css
+++ b/src/app/pages/user/print-quiz/print-quiz.component.css
@@ -1,17 +1,27 @@
-/* @media print {
 
-    .navbar{
-display: none !important;
+
+    @media print {
+      
+    
     }
-    body * {
-        visibility: hidden;
+
+    .caption{
+        text-align: center;
+        font-family: 'Times New Roman', Times, serif;
     }
-    #printable-content, #printable-content * {
-        visibility: visible;
+
+    #cape{
+        font-size: 15px;
+        text-transform: uppercase;
+        color: rgb(6, 6, 6);
     }
-    #printable-content {
-        position: absolute;
-        left: 0;
-        top: 0;
+    #marks{
+        line-height: 12px;
+        border: 2px,solid, #000;
+        padding: 10px; 
     }
-} */
+
+    #marksU{
+        text-decoration: underline;
+        font-size: large;
+    }
