--- a/src/app/pages/user/sidebar/sidebar.component.html
+++ b/src/app/pages/user/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <mat-card>
     <mat-action-list>
-<div mat-subheader>Available Categories</div>
+<div mat-subheader>Available Courses</div>
 
 <button mat-list-item  mat-list-item routerLink="/user-dashboard/0"> <mat-icon mat-list-icon  class="icon-position">quiz</mat-icon> &nbsp;All Quizzes</button>
 
