--- a/src/app/pages/user/load-quiz/load-quiz.component.html
+++ b/src/app/pages/user/load-quiz/load-quiz.component.html
@@ -23,7 +23,7 @@
                     <mat-card-action>
                         <button (click)="printPage()" mat-button color="primary" 
                         matTooltip="Summary Results"
-                        aria-label="Button that displays a tooltip when focused or hovered over" (click)="OpenSummary()" >View </button>
+                        aria-label="Button that displays a tooltip when focused or hovered over" (click)="OpenSummary(q.qid)" >View </button>
                         <!-- <button mat-raised-button color="primary" (click)="OpenSummary()" class="" >pop</button> -->
 
                         <!-- <button (click)="printPage()" mat-raised-button color="accent" id="homePrintbtn">Print</button> -->
