--- a/src/app/pages/admin/add-quiz/add-quiz.component.html
+++ b/src/app/pages/admin/add-quiz/add-quiz.component.html
@@ -38,11 +38,38 @@
 </div>
 
 <!-- ADD QUIZ PASSWORD -->
-<mat-form-field class="w100" appearance="fill">
+<div class="row">
+    <div class="col-md-6">
+        <mat-form-field class="w100" appearance="fill">
+            <mat-label>Quiz Password</mat-label>
+            <input [(ngModel)] = "quizData.quizpassword"  
+            type="quizPassword" name="quizpassword" matInput>
+        </mat-form-field>
+    </div>
+
+    <div class="col-md-6">
+        <!-- Number of questions to be displayed -->
+        <mat-form-field class="w100" appearance="fill">
+            <mat-label>Quiz Time</mat-label>
+            <input [(ngModel)] = "quizData.quizTime"  
+            type="quizTime" name="quizTime" matInput>
+        </mat-form-field>
+
+    </div>
+</div>
+
+
+
+
+
+<!-- <mat-form-field class="w100" appearance="fill">
     <mat-label>Quiz Password</mat-label>
     <input [(ngModel)] = "quizData.quizpassword"  
     type="quizPassword" name="quizpassword" matInput>
-</mat-form-field>
+</mat-form-field> -->
+
+
+
 
 
 <mat-slide-toggle name="active" [(ngModel)] = "quizData.active"
