--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -1,3 +1,23 @@
-.full-width{
+/* .full-width{
     width: 100%;
-}
+} */
+
+
+.login-form-flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  }
+  
+  .button-flex-container {
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+  }
+
+  .button-flex{
+    display: inline-block;
+    width: 100%;
+    /* justify-content: flex-end; */
+  }
