--- a/src/app/pages/admin/welcome/welcome.component.html
+++ b/src/app/pages/admin/welcome/welcome.component.html
@@ -91,13 +91,21 @@
                 <div class="col-md-6">
                         <mat-card-content align="right">
                             <mat-form-field>
-                                <mat-label>Select Quiz</mat-label>
-                                <mat-select>
+                                <mat-label>Select  Course</mat-label>
+
+                                <!-- <mat-select name="category" [(ngModel)] = "quizData.category.cid"> -->
+
+                                <mat-select name="category">
+                                    <mat-option *ngFor="let c of categories" [value]="c.cid">
+                                        {{c.title}}
+                                    </mat-option>
+                                </mat-select>
+                                <!-- <mat-select>
                                   <mat-option value="option">Data Science</mat-option>
                                   <mat-option value="option">AI</mat-option>
                                   <mat-option value="option">Cybersecurity</mat-option>
 
-                                </mat-select>
+                                </mat-select> -->
                               </mat-form-field>
                         </mat-card-content>
                 </div>
