--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -21,3 +21,22 @@
     width: 100%;
     /* justify-content: flex-end; */
   }
+
+
+  mat-card{
+    margin: 1px;
+    text-align: left;
+}
+
+.mat-mdc-form-field{
+    width: 95%;
+    margin: 1%;
+}
+.mat-50{
+    width:48%;
+    margin: 1%;
+}
+
+button{
+    margin: 2px;
+}
