Results upon print shows immediately

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,16 @@
-<ngx-ui-loader
+<!-- <ngx-ui-loader
 fgsColor="#ff4081"
 pbColor="#ff4081"
 textColor="#ff4081"
 pbThickness="6"
 text="Loading information!"
-></ngx-ui-loader>
+></ngx-ui-loader> -->
 
 
-<div ngxUiLoaderBlurred (blur)="10">
+<!-- <div ngxUiLoaderBlurred (blur)="10"> -->
+
+
+<!-- <div> -->
 
     <!-- navbar static content -->
 <app-navbar></app-navbar>
@@ -15,4 +18,4 @@ text="Loading information!"
 
 <!-- dynamic content -->
 <router-outlet></router-outlet>
-</div>
+<!-- </div> -->
