--- a/src/app/pages/user/load-quiz/load-quiz.component.html
+++ b/src/app/pages/user/load-quiz/load-quiz.component.html
@@ -1,3 +1,17 @@
+<ngx-ui-loader
+fgsColor="#ff4081"
+pbColor="#ff4081"
+textColor="#ff4081"
+pbThickness="6"
+text="Loading information!"
+></ngx-ui-loader>
+
+
+<div ngxUiLoaderBlurred (blur)="10">
+
+
+
+
 <div class="bootstrap">
     <div class="container-fluid">
         <h1 class="mt20">Quizzes Available</h1>
@@ -78,4 +92,6 @@
 </mat-card>
 
 </p-dialog>
+
+</div>
 
