--- a/src/app/pages/user/print-quiz/print-quiz.component.html
+++ b/src/app/pages/user/print-quiz/print-quiz.component.html
@@ -13,6 +13,8 @@
                 <!-- <h1 class="mt20" id="quiztitle">Quiz <b>{{questions[0].quiz.title}}</b></h1> -->
             </ng-container>
             <!-- <div class="row"> -->
+
+                <div class="watermark">
             <div class="caption">
                 <p id="cape">University of Cape Coast.<br>
 
@@ -21,16 +23,30 @@
                     {{questions[0].quiz.title}}. Time Allowed:
                     <i>
                         <b> {{questions[0].quiz.quizTime * 1}} minutes</b>
+
                     </i>
                 </p>
-                <h1> Index Number:{{username}}</h1>
+                <label> Index Number:{{username | uppercase}}</label>
             </div>
 
-            <span id="marks">
-                <p>Marks : <span id="marksU">{{marksGot}}/{{maxMarks}}</span></p>
+
+            <!-- <span id="marks">
+                <p>Marks : <span id="marksU">{{correctAnswers}}/{{ questions[0].quiz.maxMarks}}</span></p>
                 <p> Correct Answers : {{correctAnswers}}</p>
+                <p> Correct Answers: {{reportData[0].marks}}</p>
+                <p>Attempted questions : {{attempted}}</p>
+            </span> -->
+
+
+            <!-- <div *ngIf="reportData"> -->
+            <span id="marks" *ngFor="let r of reportData">
+                <p>Marks : <span id="marksU">{{r.marks}}/{{ r.quiz.maxMarks}}</span></p>
+                <p> Correct Answers : {{r.marks}}</p>
+                <!-- <p> Correct Answers: {{reportData[0].marks}}</p> -->
                 <p>Attempted questions : {{attempted}}</p>
             </span>
+            <!-- </div> -->
+
 
             <!-- </div> -->
 
@@ -91,6 +107,8 @@
                     </div>
                 </mat-card-content>
             </mat-card>
+            </div>
+            
             <mat-card-actions>
                 <div class="container text-center">
                     <button (click)="printPage()" mat-raised-button color="accent" id="homePrintbtn">Print</button>
