--- a/src/app/pages/user/start/start.component.html
+++ b/src/app/pages/user/start/start.component.html
@@ -1,4 +1,17 @@
 <!-- {{questionss|json}} -->
+
+<ngx-ui-loader
+fgsColor="#ff4081"
+pbColor="#ff4081"
+textColor="#ff4081"
+pbThickness="6"
+text="Loading information!"
+></ngx-ui-loader>
+
+
+<div ngxUiLoaderBlurred (blur)="10">
+
+
 <div class="bootstrap-wrapper" *ngIf="!isSubmit">
     <div class="container-fluid">
         <div class="row">
@@ -196,4 +209,7 @@
    </mat-card-actions> -->
         </div>
     </div>
+</div>
+
+
 </div>
