--- a/src/app/pages/admin/welcome/welcome.component.html
+++ b/src/app/pages/admin/welcome/welcome.component.html
@@ -79,40 +79,76 @@
         <!-- QUIZ STATISTICS -->
         <mat-card class="mt20">
             <div class="row">
-                <div class="col-md-6">     
+                <div class="col-md-4">     
                     
                     <mat-card-title class="stat">
                         Statistics
                     </mat-card-title>
                             
                 </div>
+
+
+
+                <div class="col-md-4">
+                    <mat-card-content align="right">
+                        <mat-form-field>
+                            <mat-label>Select  Course</mat-label>
+                            <!-- <mat-select name="category" [(ngModel)] = "quizData.category.cid"> -->
+                            <mat-select name="category" [(ngModel)]="qId"
+                            (selectionChange)="onOptionSelected()"
+                            >
+                                <mat-option *ngFor="let c of allQuizzes" [value]="c.qId">
+                                    {{c.category.title}}
+                                </mat-option>
+                            </mat-select>
+                            <!-- <mat-select>
+                              <mat-option value="option">Data Science</mat-option>
+                              <mat-option value="option">AI</mat-option>
+                              <mat-option value="option">Cybersecurity</mat-option>
+
+                            </mat-select> -->
+                          </mat-form-field>
+                    </mat-card-content>
+            </div>
             
             
-                <div class="col-md-6">
+                <div class="col-md-4">
                         <mat-card-content align="right">
                             <mat-form-field>
-                                <mat-label>Select  Course</mat-label>
+                                <mat-label>Select  Quiz</mat-label>
 
                                 <!-- <mat-select name="category" [(ngModel)] = "quizData.category.cid"> -->
 
-                                <mat-select name="category">
-                                    <mat-option *ngFor="let c of categories" [value]="c.cid">
-                                        {{c.title}}
+                                <mat-select name="category" [(ngModel)]="qId"
+                                (selectionChange)="onOptionSelectedReport()" (change)="changeCourse($event)"
+                                >
+                                    <mat-option *ngFor="let r of reportsData" [value]="r.quiz.qId">
+                                        {{r.quiz.title}}
                                     </mat-option>
                                 </mat-select>
+
+                                <!-- <mat-select name="category" [(ngModel)]="selectedTitle"
+                                (change)="changeCourse($event)"
+                                >
+                                    <mat-option *ngFor="let r of quizTitles" [value]="r">
+                                        {{r}}
+                                    </mat-option>
+                                </mat-select> -->
+
+
+
+
+
+
                                 <!-- <mat-select>
                                   <mat-option value="option">Data Science</mat-option>
                                   <mat-option value="option">AI</mat-option>
                                   <mat-option value="option">Cybersecurity</mat-option>
-
                                 </mat-select> -->
                               </mat-form-field>
                         </mat-card-content>
                 </div>
             </div>
-
-            
-
 
 <mat-divider></mat-divider>
 
@@ -179,10 +215,73 @@
         </div>
     </mat-card>
 
+<div *ngIf="reportsData">
+    <table mat-table [dataSource]="reportsData" class="mat-elevation-z8">
+
+        <ng-container matColumnDef="index">
+          <th mat-header-cell *matHeaderCellDef> Index Number</th>
+          <td mat-cell *matCellDef="let element"> {{element.user.username}} </td>
+        </ng-container>
+      
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef> Name </th>
+          <td mat-cell *matCellDef="let element"> {{element.user.firstname}} {{element.user.lastname}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="marks">
+            <th mat-header-cell *matHeaderCellDef> Marks </th>
+            <td mat-cell *matCellDef="let element"> {{element.marks}} </td>
+          </ng-container>
+      
+        <tr mat-header-row *matHeaderRowDef="displayColumn"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayColumn;"></tr>
+
+        
+      </table>
+
+      <div class=" container text-center" *ngIf="reportsData.length==0">
+        <h1>No Results Summary, for this quiz</h1>
+    
+</div>
+    </div>
+
+   
+      
 
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
 
 
 
@@ -280,6 +379,12 @@
         </div>
 
     </div>
+
+
+    <!-- <div *ngIf="reportsData">
+        Display fetched data here
+        {{allQuizzes | json}}
+      </div> -->
 
 
 
